// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Board component Should render properly when game is Started 1`] = `
<div
  key="fakeRoom#"
  style={
    Object {
      "alignItems": "center",
      "border": "1px solid #333",
      "borderRadius": "3vw",
      "display": "flex",
      "height": "5vw",
      "justifyContent": "space-around",
      "margin": "1vw 0",
    }
  }
>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Room Name : 
    fakeRoom
  </span>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Room Owner : 
    fakePlayer1
  </span>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Player Count : 
    1/1
  </span>
  <Button
    className="joinRoom"
    isDisable={true}
    onClick={[Function]}
    style={
      Object {
        "width": "15%",
      }
    }
    text="Game Started"
    type="button"
  />
</div>
`;

exports[`Test Board component Should render properly when is not lobby 1`] = `
<div
  key="fakeRoom#"
  style={
    Object {
      "alignItems": "center",
      "border": "1px solid #333",
      "borderRadius": "3vw",
      "display": "flex",
      "height": "5vw",
      "justifyContent": "space-around",
      "margin": "1vw 0",
    }
  }
>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Room Name : 
    fakeRoom
  </span>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Room Owner : 
    fakePlayer1
  </span>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Player Count : 
    1/1
  </span>
  <Button
    className="joinRoom"
    isDisable={true}
    onClick={[Function]}
    style={
      Object {
        "width": "15%",
      }
    }
    text="Full"
    type="button"
  />
</div>
`;

exports[`Test Board component Should render properly when isLobby 1`] = `
<div
  key="fakeRoom#"
  style={
    Object {
      "alignItems": "center",
      "border": "1px solid #333",
      "borderRadius": "3vw",
      "display": "flex",
      "height": "5vw",
      "justifyContent": "space-around",
      "margin": "1vw 0",
    }
  }
>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Room Name : 
    fakeRoom
  </span>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Room Owner : 
    fakePlayer1
  </span>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Player Count : 
    1/1
  </span>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-evenly",
        "width": "20%",
      }
    }
  >
    <Button
      className="leaveRoom"
      onClick={[Function]}
      style={
        Object {
          "width": "40%",
        }
      }
      text="Leave"
      type="button"
    />
  </div>
</div>
`;

exports[`Test Board component Should render properly when isOwner is true 1`] = `
<div
  key="fakeRoom#"
  style={
    Object {
      "alignItems": "center",
      "border": "1px solid #333",
      "borderRadius": "3vw",
      "display": "flex",
      "height": "5vw",
      "justifyContent": "space-around",
      "margin": "1vw 0",
    }
  }
>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Room Name : 
    fakeRoom
  </span>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Room Owner : 
    fakePlayer1
  </span>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Player Count : 
    1/1
  </span>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-evenly",
        "width": "20%",
      }
    }
  >
    <Button
      className="leaveRoom"
      onClick={[Function]}
      style={
        Object {
          "width": "40%",
        }
      }
      text="Leave"
      type="button"
    />
    <Button
      className="startGame"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(100, 200, 100, 1)",
          "width": "40%",
        }
      }
      text="Start"
      type="button"
    />
  </div>
</div>
`;

exports[`Test Board component Should render properly when room is not full 1`] = `
<div
  key="fakeRoom#"
  style={
    Object {
      "alignItems": "center",
      "border": "1px solid #333",
      "borderRadius": "3vw",
      "display": "flex",
      "height": "5vw",
      "justifyContent": "space-around",
      "margin": "1vw 0",
    }
  }
>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Room Name : 
    fakeRoom
  </span>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Room Owner : 
    fakePlayer1
  </span>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Player Count : 
    1/2
  </span>
  <Button
    className="joinRoom"
    isDisable={false}
    onClick={[Function]}
    style={
      Object {
        "width": "15%",
      }
    }
    text="Join"
    type="button"
  />
</div>
`;

exports[`Test Board component Should render properly when there is no room 1`] = `
<div
  key="empty"
  style={
    Object {
      "alignItems": "center",
      "border": "1px solid #333",
      "borderRadius": "3vw",
      "display": "flex",
      "height": "5vw",
      "justifyContent": "space-around",
      "margin": "1vw 0",
    }
  }
>
  <span>
    No room to join
  </span>
</div>
`;

exports[`Test Board component Should test onJoinGame 1`] = `
<div
  key="fakeRoom#"
  style={
    Object {
      "alignItems": "center",
      "border": "1px solid #333",
      "borderRadius": "3vw",
      "display": "flex",
      "height": "5vw",
      "justifyContent": "space-around",
      "margin": "1vw 0",
    }
  }
>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Room Name : 
    fakeRoom
  </span>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Room Owner : 
    fakePlayer1
  </span>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Player Count : 
    1/2
  </span>
  <Button
    className="joinRoom"
    isDisable={false}
    onClick={[Function]}
    style={
      Object {
        "width": "15%",
      }
    }
    text="Join"
    type="button"
  />
</div>
`;

exports[`Test Board component Should test onStartGame 1`] = `
<div
  key="fakeRoom#"
  style={
    Object {
      "alignItems": "center",
      "border": "1px solid #333",
      "borderRadius": "3vw",
      "display": "flex",
      "height": "5vw",
      "justifyContent": "space-around",
      "margin": "1vw 0",
    }
  }
>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Room Name : 
    fakeRoom
  </span>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Room Owner : 
    fakePlayer1
  </span>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Player Count : 
    1/2
  </span>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-evenly",
        "width": "20%",
      }
    }
  >
    <Button
      className="leaveRoom"
      onClick={[Function]}
      style={
        Object {
          "width": "40%",
        }
      }
      text="Leave"
      type="button"
    />
    <Button
      className="startGame"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(100, 200, 100, 1)",
          "width": "40%",
        }
      }
      text="Start"
      type="button"
    />
  </div>
</div>
`;

exports[`Test Board component Should test onleave 1`] = `
<div
  key="fakeRoom#"
  style={
    Object {
      "alignItems": "center",
      "border": "1px solid #333",
      "borderRadius": "3vw",
      "display": "flex",
      "height": "5vw",
      "justifyContent": "space-around",
      "margin": "1vw 0",
    }
  }
>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Room Name : 
    fakeRoom
  </span>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Room Owner : 
    fakePlayer1
  </span>
  <span
    style={
      Object {
        "overflow": "hidden",
        "textAlign": "left",
        "textOverflow": "ellipsis",
        "whiteSpace": "nowrap",
        "width": "20%",
      }
    }
  >
    Player Count : 
    1/2
  </span>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-evenly",
        "width": "20%",
      }
    }
  >
    <Button
      className="leaveRoom"
      onClick={[Function]}
      style={
        Object {
          "width": "40%",
        }
      }
      text="Leave"
      type="button"
    />
  </div>
</div>
`;
